--- a/index.html
+++ b/index.html
@@ -27,68 +27,66 @@
   <div class="slider">
     <div class="slide-track">
       <div class="slide">
-        <img src="images/200zl_JPII_gold_a.jpg" alt="image" />
+        <img src="images/transparent_1.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/200zl_JPII_2002_gold_a.jpg" alt="image" />
+        <img src="images/transparent_2.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/dmowski_gold_a.jpg" alt="image" />
+        <img src="images/transparent_3.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/kanonizacja_gold_a.jpg" alt="image" />
+        <img src="images/transparent_4.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/beatyfikacja_gold_a.jpg" alt="image" />
+        <img src="images/transparent_5.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/papiez2005_gold_a.jpg" alt="image" />
+        <img src="images/transparent_6.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/bielik_gold_a.jpg" alt="image" />
+        <img src="images/transparent_7.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/kangur_gold_a.jpg" alt="image" />
+        <img src="images/transparent_8.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/37zl_gold_a.jpg" alt="image" />
+        <img src="images/transparent_9.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/papiez_gold_a.jpg" alt="image" />
+        <img src="images/transparent_10.png" alt="image" />
       </div>
 
       <div class="slide">
-        <img src="images/200zl_JPII_gold_a.jpg" alt="image" />
+        <img src="images/transparent_1.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/200zl_JPII_2002_gold_a.jpg" alt="image" />
+        <img src="images/transparent_2.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/dmowski_gold_a.jpg" alt="image" />
+        <img src="images/transparent_3.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/kanonizacja_gold_a.jpg" alt="image" />
+        <img src="images/transparent_4.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/beatyfikacja_gold_a.jpg" alt="image" />
+        <img src="images/transparent_5.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/papiez2005_gold_a.jpg" alt="image" />
+        <img src="images/transparent_6.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/bielik_gold_a.jpg" alt="image" />
+        <img src="images/transparent_7.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/kangur_gold_a.jpg" alt="image" />
+        <img src="images/transparent_8.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/37zl_gold_a.jpg" alt="image" />
+        <img src="images/transparent_9.png" alt="image" />
       </div>
       <div class="slide">
-        <img src="images/papiez_gold_a.jpg" alt="image" />
+        <img src="images/transparent_10.png" alt="image" />
       </div>
-
-
     </div>
   </div>
 
@@ -96,7 +94,7 @@
   <hr id="big_gold_separator">
 
   <div class="main">
-    <div class="container">
+    <div class="container section-gold">
       <h1 class="gold">Złoto</h1>
 
       <h4>1. Jan Paweł II - Pielgrzym Pokoju 2010</h4>
@@ -481,6 +479,8 @@
       </div>
       <p>Nakład: 4 900, Stop: Ag 900 , Średnica: 27 mm, waga: 15,5g</p>
     -->
+    </div>
+    <div class="container section-silver">
       <h1 class="silver">Srebro</h1>
 
       <h4>1. Jan Paweł II - Habemus Papam 2005</h4>
