--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 <body>
 
 
+  <div>
+
+    <div class="nav-contact">
+      <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmatyk site">
+        <img class="contact_icon" src="images/icon_email_gold.png" alt="icon">
+      </a>
+      <a href="https://www.facebook.com/sebastian.strus">
+        <img class="contact_icon" src="images/icon_fb_gold.png" alt="icon">
+      </a>
+      <a href="tel:+46700716911">
+        <img class="contact_icon" src="images/icon_phone_gold.png" alt="icon">
+      </a>
+    </div>
+  </div>
   <h1 id="title">NUMIZMAT</h1>
   <hr id="big_gold_separator">
 
@@ -655,13 +669,13 @@
   <hr id="big_silver_separator">
   <div id="contact_icons">
     <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmatyk site">
-      <img class="contact_icon" src="images/icon_email.png" alt="icon">
+      <img class="contact_icon" src="images/icon_email_silver.png" alt="icon">
     </a>
     <a href="https://www.facebook.com/sebastian.strus">
-      <img class="contact_icon" src="images/icon_fb.png" alt="icon">
+      <img class="contact_icon" src="images/icon_fb_silver.png" alt="icon">
     </a>
     <a href="tel:+46700716911">
-      <img class="contact_icon" src="images/icon_phone.png" alt="icon">
+      <img class="contact_icon" src="images/icon_phone_silver.png" alt="icon">
     </a>
   </div>
 
