--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 
   <hr id="big_gold_separator">
 
+
+  <h5 id="welcome-text">Prezentowane monety są w stanie menniczym.<br>Zapraszam do kontaktu.</h5>
+
   <div class="main">
     <div class="container section-gold">
       <h1 class="gold">Złoto</h1>
