Fixed email subject

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div>
 
     <div class="nav-contact">
-      <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmatyk site">
+      <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
         <img class="contact_icon" src="images/icon_email_gold.png" alt="icon">
       </a>
       <a href="https://www.facebook.com/sebastian.strus">
