--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
           <img class="bigphoto" src="images/pope05_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g</p>
+      <p>Nakład: –, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.
+        <!--<span>Cena: 430 sek</span>-->
+      </p>
+      <p class="price">Cena: 1200 sek</p>
       <hr id="small_separator">
 
       <h4>2. Najmniejsze Złote Monety Świata, Pomnik Chrystusa Zbawiciela</h4>
@@ -148,7 +151,7 @@
           <img class="bigphoto" src="images/jezus_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g</p>
+      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.</p>
       <hr id="small_separator">
 
       <h4>3. Złota Moneta – Chińska Panda, 10 yuanów 2016</h4>
