--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 500px)" href="mobile.css" />
   <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 501px)" href="main.css" />
   <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Gotu&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="images/n.png">
   <title>Numizmat</title>
 </head>
@@ -133,7 +134,6 @@
       <p>Nakład: –, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.
         <!--<span>Cena: 430 sek</span>-->
       </p>
-      <p class="price">Cena: 1200 sek</p>
       <hr id="small_separator">
 
       <h4>2. Najmniejsze Złote Monety Świata, Pomnik Chrystusa Zbawiciela</h4>
