--- a/index.html
+++ b/index.html
@@ -438,6 +438,23 @@
       <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz</p>
       <hr id="small_separator">
 
+      <h4>18. Skarbnica Narodowa – Siedem cudów świata</h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/7_cudow_gold_a.jpg" alt="image">
+          <img class="bigphoto" src="images/7_cudow_gold_a.jpg" alt="image"> </div>
+        <div class="col-1">
+          <img class="photo" src="images/7_cudow_gold_b.jpg" alt="image">
+          <img class="bigphoto" src="images/7_cudow_gold_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/7_cudow_gold_c.jpg" alt="image">
+          <img class="bigphoto" src="images/7_cudow_gold_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1 g</p>
+      <hr id="small_separator">
+
       <!-- <h4>17. Złota Moneta 200 zł Jan Paweł II, 2002</h4>
       <div class="row">
         <div class="col-1">
