--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <img class="bigphoto" src="images/papiez_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 10 000, Stop: Au 900, Średnica: 12,00 mm, waga: 1g</p>
+      <p>Nakład: 10.000, Stop: Au 900, Średnica: 12,00 mm, waga: 1g</p>
       <hr id="small_separator">
 
       <h4>9. 10 dolarów nowozelandzkich, Jan Paweł II 2006</h4>
@@ -281,7 +281,7 @@
           <img class="bigphoto" src="images/10dJPII_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 1 000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g</p>
+      <p>Nakład: 1000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g</p>
       <hr id="small_separator">
 
       <h4>10. 37 zł / 2009 r. - Ksiądz Jerzy Popiełuszko</h4>
@@ -299,7 +299,7 @@
           <img class="bigphoto" src="images/37zl_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 60 000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g</p>
+      <p>Nakład: 60.000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g</p>
       <hr id="small_separator">
 
       <h4>11. Australijski Kangur 1/10 uncji złota</h4>
@@ -357,7 +357,7 @@
           <img class="bigphoto" src="images/papiez2005_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 18 700, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
+      <p>Nakład: 18.700, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
       <hr id="small_separator">
 
       <h4>14. Złota Moneta 100 ZŁ Beatyfikacja Jana Pawła II</h4>
@@ -379,7 +379,7 @@
           <img class="bigphoto" src="images/beatyfikacja_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 8 000, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
+      <p>Nakład: 8.000, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
       <hr id="small_separator">
 
       <h4>15. Złota Moneta 100 ZŁ Kanonizacja Jana Pawła II</h4>
@@ -397,7 +397,7 @@
           <img class="bigphoto" src="images/kanonizacja_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 5 000, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
+      <p>Nakład: 5.000, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
       <hr id="small_separator">
 
       <h4>16. Niue 10 Dolarów 2018, Roman Dmowski, 100-lecie niepodległości Polski</h4>
@@ -521,7 +521,7 @@
     <div class="container section-silver">
       <h1 class="silver">Srebro</h1>
 
-      <h4>1. Jan Paweł II - Habemus Papam 2005</h4>
+      <h4>1. Jan Paweł II - Habemus Papam 2008</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/habemus_silver_a.jpg" alt="image">
@@ -536,10 +536,10 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 500 , Średnica: 34 mm, waga: 15,1g</p>
+      <p>Nakład: 10.000, Stop: Ag 500 , Średnica: 34 mm, waga: 15g</p>
       <hr id="silver_separator">
 
-      <h4>2. Srebrna moneta 10 zł 2002 rok Jan Paweł II</h4>
+      <h4>2. Jan Paweł II – 10 zł 2002</h4>
       <!--10 zł 2002 Jan Paweł II - Pontifex Maximus-->
       <div class="row">
         <div class="col-1">
@@ -555,10 +555,10 @@
           <img class="bigphoto" src="images/box1.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 925 , Średnica: 38 mm, waga: 14,14g</p>
+      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
       <hr id="silver_separator">
 
-      <h4>3. Popieluszko</h4>
+      <h4>3. Jerzy Popiełuszko – 10 zł 2009</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/popieluszko_silver_a.jpg" alt="image">
@@ -573,7 +573,7 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999 , Średnica: 38 mm, waga: 31,10g</p>
+      <p>Nakład: 100 000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
       <hr id="silver_separator">
 
       <h4>4. Kanada, 5 Dolarów 2011 - Liść Klonowy (1 oz. Ag999.9)</h4>
@@ -613,7 +613,7 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 50 000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
+      <p>Nakład: 50.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
       <hr id="silver_separator">
 
       <h4>6. 10 zł Roman Dmowski Stulecie odzyskania przez Polskę niepodległości</h4>
@@ -631,7 +631,7 @@
           <img class="bigphoto" src="images/dmowski_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 20 000, Stop: Ag 925 , Wymiary: 32 X 22,4 mm, waga: 14,14g</p>
+      <p>Nakład: 20.000, Stop: Ag 925 , Wymiary: 32 X 22,4 mm, waga: 14,14g</p>
       <hr id="silver_separator">
 
 
@@ -650,7 +650,7 @@
           <img class="bigphoto" src="images/box2.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 80 000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g</p>
+      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g</p>
       <hr id="silver_separator">
 
       <h4>8. Jan Paweł II - Jasna Góra 1991</h4>
@@ -683,7 +683,7 @@
           <img class="bigphoto" src="images/10d_jpii_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 8500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17 g</p>
+      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17 g</p>
       <hr id="silver_separator">
 
     </div>
