Redirect to new FB page

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
     <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmatyk site">
       <img class="contact_icon" src="images/icon_email_silver.png" alt="icon">
     </a>
-    <a href="https://www.facebook.com/sebastian.strus">
+    <a href="https://www.facebook.com/Numizmatse-101197201596729">
       <img class="contact_icon" src="images/icon_fb_silver.png" alt="icon">
     </a>
     <a href="tel:+46700716911">
