--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
         <img class="contact_icon" src="images/icon_email_gold.png" alt="icon">
       </a>
-      <a href="https://www.facebook.com/sebastian.strus">
+      <a href="https://www.facebook.com/Numizmatse-101197201596729">
         <img class="contact_icon" src="images/icon_fb_gold.png" alt="icon">
       </a>
       <a href="tel:+46700716911">
