Added Pilecki and Inka

--- a/index.html
+++ b/index.html
@@ -686,6 +686,44 @@
       <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17 g</p>
       <hr id="silver_separator">
 
+      <h4>10. 10 złotych 2017, Żołnierze Niezłomni, Danuta Siedzikówna ps. „Inka”
+      </h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/inka_silver_a.jpg" alt="image">
+          <img class="bigphoto" src="images/inka_silver_a.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/inka_silver_b.jpg" alt="image">
+          <img class="bigphoto" src="images/inka_silver_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/inka_silver_c.jpg" alt="image">
+          <img class="bigphoto" src="images/inka_silver_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: 17.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g</p>
+      <hr id="silver_separator">
+
+      <h4>10. 10 złotych 2017, Żołnierze Niezłomni, Witold Pilecki ps. „Witold”
+      </h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/pilecki_silver_a.jpg" alt="image">
+          <img class="bigphoto" src="images/pilecki_silver_a.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/pilecki_silver_b.jpg" alt="image">
+          <img class="bigphoto" src="images/pilecki_silver_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/pilecki_silver_c.jpg" alt="image">
+          <img class="bigphoto" src="images/pilecki_silver_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g</p>
+      <hr id="silver_separator">
+
     </div>
   </div>
 
