Added Dmowski coin

--- a/index.html
+++ b/index.html
@@ -421,7 +421,24 @@
       <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g</p>
       <hr id="small_separator">
 
-      <h4>17. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
+      <h4>17. Złota Moneta 100 zł Roman Dmowski 2017</h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/100dmowski_gold_a.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_gold_a.jpg" alt="image"> </div>
+        <div class="col-1">
+          <img class="photo" src="images/100dmowski_gold_b.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_gold_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/100dmowski_gold_c.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_goldc.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: 2000, Stop: Au 900, Średnica: 21 mm, waga: 8 g</p>
+      <hr id="small_separator">
+
+      <h4>18. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
@@ -438,7 +455,7 @@
       <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz</p>
       <hr id="small_separator">
 
-      <h4>18. Skarbnica Narodowa – Siedem cudów świata</h4>
+      <h4>19. Skarbnica Narodowa – Siedem cudów świata</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/7_cudow_gold_a.jpg" alt="image">
