Added Dmowski coin again

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         </div>
         <div class="col-1">
           <img class="photo" src="images/100dmowski_gold_c.jpg" alt="image">
-          <img class="bigphoto" src="images/100dmowski_goldc.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_gold_c.jpg" alt="image">
         </div>
       </div>
       <p>Nakład: 2000, Stop: Au 900, Średnica: 21 mm, waga: 8 g</p>
