Added scroll arrow

--- a/index.html
+++ b/index.html
@@ -742,8 +742,13 @@
       <hr id="silver_separator">
 
     </div>
+
+
   </div>
 
+
+  <button onclick="topFunction()" id="topBtn" title="Go to top"><img src="images/arrow_up_gold.png"
+      alt="Arrow img"></button>
 
   <hr id="big_silver_separator">
   <div id="contact_icons">
