--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
           <img class="bigphoto" src="images/10d_jpii_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17 g</p>
+      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17g</p>
       <hr id="silver_separator">
 
       <h4>10. 10 złotych 2017, Żołnierze Niezłomni, Danuta Siedzikówna ps. „Inka”
@@ -739,6 +739,25 @@
         </div>
       </div>
       <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g</p>
+      <hr id="silver_separator">
+
+      <h4>12. Kolekcja 24 szt. Jan Paweł II
+      </h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/24pope_silver_a.jpg" alt="image">
+          <img class="bigphoto" src="images/24pope_silver_a.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/24pope_silver_b.jpg" alt="image">
+          <img class="bigphoto" src="images/24pope_silver_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/24pope_silver_c.jpg" alt="image">
+          <img class="bigphoto" src="images/24pope_silver_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g</p>
       <hr id="silver_separator">
 
     </div>
