Added 2 dogs silver coins

--- a/index.html
+++ b/index.html
@@ -741,7 +741,45 @@
       <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g</p>
       <hr id="silver_separator">
 
-      <h4>12. Kolekcja 24 szt. Jan Paweł II
+      <h4>12. Australia 1$, Rok psa 2018
+      </h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/dog1_silver_a.jpg" alt="image">
+          <img class="bigphoto" src="images/dog1_silver_a.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/dog1_silver_b.jpg" alt="image">
+          <img class="bigphoto" src="images/dog1_silver_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/box3.jpg" alt="image">
+          <img class="bigphoto" src="images/box3.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g</p>
+      <hr id="silver_separator">
+
+      <h4>13. Australia 2$, Rok psa 2018
+      </h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/dog2_silver_a.jpg" alt="image">
+          <img class="bigphoto" src="images/dog2_silver_a.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/dog2_silver_b.jpg" alt="image">
+          <img class="bigphoto" src="images/dog2_silver_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/box3.jpg" alt="image">
+          <img class="bigphoto" src="images/box3.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g</p>
+      <hr id="silver_separator">
+
+      <h4>14. Kolekcja 24 szt. Jan Paweł II
       </h4>
       <div class="row">
         <div class="col-1">
