Added form and updated nav

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
   <div>
 
     <div class="nav-contact">
-      <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
-        <img class="contact_icon" src="images/icon_email_gold.png" alt="icon">
+      <a href="mailto:poczta@numizmat.se?subject=Mail from Numizmat site">
+        <img class="contact_icon" src="images/z_koperta_white.png" alt="icon">
+        <p id="email_address">poczta@numizmat.se</p>
       </a>
+
       <a href="https://www.facebook.com/Numizmatse-101197201596729">
-        <img class="contact_icon" src="images/icon_fb_gold.png" alt="icon">
+        <img id="fb_icon" class="contact_icon" src="images/fb_nice_logo.png" alt="icon">
       </a>
-      <a href="tel:+46700716911">
+      <!-- <a href="tel:+46700716911">
         <img class="contact_icon" src="images/icon_phone_gold.png" alt="icon">
-      </a>
+      </a> -->
     </div>
   </div>
   <h1 id="title">NUMIZMAT</h1>
@@ -538,7 +540,7 @@
     <div class="container section-silver">
       <h1 class="silver">Srebro</h1>
 
-      <h4>1. Jan Paweł II - Habemus Papam 2008</h4>
+      <h4>1. Jan Paweł II - Habemus Papam 2008</h4><!-- box blue perfect -->
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/habemus_silver_a.jpg" alt="image">
@@ -797,30 +799,26 @@
       </div>
       <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g</p>
       <hr id="silver_separator">
-
     </div>
+  </div>
 
 
+  <div id=form_container>
+
+    <h3>Formularz kontaktowy</h3>
+    <form action="https://getform.io/f/7139b833-bac5-4993-97fd-726e795093c1" method="POST">
+      <input type="text" id="fname" name="name" placeholder="Imię i nazwisko">
+      <input type="text" id="lname" name="email" placeholder="Adres e-mail">
+      <textarea type="text" id="message" name="message" placeholder="Wiadomość"></textarea>
+      <button type="submit">Wyślij</button>
+    </form>
   </div>
 
 
   <button onclick="topFunction()" id="topBtn" title="Go to top"><img src="images/arrow_up_gold.png"
       alt="Arrow img"></button>
 
-  <hr id="big_silver_separator">
-  <div id="contact_icons">
-    <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmatyk site">
-      <img class="contact_icon" src="images/icon_email_silver.png" alt="icon">
-    </a>
-    <a href="https://www.facebook.com/Numizmatse-101197201596729">
-      <img class="contact_icon" src="images/icon_fb_silver.png" alt="icon">
-    </a>
-    <a href="tel:+46700716911">
-      <img class="contact_icon" src="images/icon_phone_silver.png" alt="icon">
-    </a>
-  </div>
 
-  <hr id="big_silver_separator">
 
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"
     integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
