--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.
-        <!--<span>Cena: 430 sek</span>-->
+        <span>Cena: 500 sek</span>
       </p>
       <hr id="small_separator">
 
@@ -153,7 +153,9 @@
           <img class="bigphoto" src="images/jezus_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.</p>
+      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.
+        <span>Cena: 900 sek</span>
+      </p>
       <hr id="small_separator">
 
       <h4>3. Złota Moneta – Chińska Panda, 10 yuanów 2016</h4>
@@ -172,6 +174,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 1g</p>
+      <span>Cena: 900 sek</span>
       <hr id="small_separator">
 
       <h4>4. Złota Moneta – Chińska Panda, 10 yuanów 2017</h4>
@@ -190,6 +193,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 1g</p>
+      <span>Cena: 900 sek</span>
       <hr id="small_separator">
 
       <h4>5. Fryderyk Chopin, 2 dolary nowozelandzkie</h4>
@@ -208,6 +212,7 @@
         </div>
       </div>
       <p>Nakład: 10.000, Stop: Au 900, Średnica: 12 mm, waga: 1g</p>
+      <span>Cena: 900 sek</span>
       <hr id="small_separator">
 
       <h4>6. SN1313 20 Franków 2003 rok Kongo Jan Paweł II</h4>
@@ -226,6 +231,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz</p>
+      <span>Cena: 1100 sek</span>
       <hr id="small_separator">
 
       <h4>7. Kanada, 50 centow kanadyjskich</h4>
@@ -244,6 +250,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999.9, Średnica: 13.92 mm, waga: 1.24g</p>
+      <span>Cena: 1100 sek</span>
       <hr id="small_separator">
 
       <h4>8. 25 zł Beatyfikacja Jana Pawła II – 1 V 2011</h4>
@@ -262,6 +269,7 @@
         </div>
       </div>
       <p>Nakład: 10.000, Stop: Au 900, Średnica: 12,00 mm, waga: 1g</p>
+      <span>Cena: 1400 sek</span>
       <hr id="small_separator">
 
       <h4>9. 10 dolarów nowozelandzkich, Jan Paweł II 2006</h4>
@@ -284,6 +292,7 @@
         </div>
       </div>
       <p>Nakład: 1000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g</p>
+      <span>Cena: 1500 sek</span>
       <hr id="small_separator">
 
       <h4>10. 37 zł / 2009 r. - Ksiądz Jerzy Popiełuszko</h4>
@@ -302,6 +311,7 @@
         </div>
       </div>
       <p>Nakład: 60.000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g</p>
+      <span>Cena: 1500 sek</span>
       <hr id="small_separator">
 
       <h4>11. Australijski Kangur 1/10 uncji złota</h4>
@@ -320,6 +330,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16,10 mm, waga: 3,11g</p>
+      <span>Cena: 2500 sek</span>
       <hr id="small_separator">
 
       <h4>12. 50 zł, Orzeł Bielik 1/10oz</h4>
@@ -342,6 +353,7 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999.9 , Średnica: 18 mm, waga: 3,11g</p>
+      <span>Cena: 3000 sek</span>
       <hr id="small_separator">
 
       <h4>13. Złota Moneta 100 ZŁ Jan Paweł II 2005r.</h4>
@@ -360,6 +372,7 @@
         </div>
       </div>
       <p>Nakład: 18.700, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
+      <span>Cena: 5400 sek</span>
       <hr id="small_separator">
 
       <h4>14. Złota Moneta 100 ZŁ Beatyfikacja Jana Pawła II</h4>
@@ -382,6 +395,7 @@
         </div>
       </div>
       <p>Nakład: 8.000, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
+      <span>Cena: 5700 sek</span>
       <hr id="small_separator">
 
       <h4>15. Złota Moneta 100 ZŁ Kanonizacja Jana Pawła II</h4>
@@ -400,6 +414,7 @@
         </div>
       </div>
       <p>Nakład: 5.000, Stop: Au 900, Średnica: 21 mm, waga: 8g</p>
+      <span>Cena: 6000 sek</span>
       <hr id="small_separator">
 
       <h4>16. Niue 10 Dolarów 2018, Roman Dmowski, 100-lecie niepodległości Polski</h4>
@@ -421,6 +436,7 @@
         </div>
       </div>
       <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g</p>
+      <span>Cena: 6000 sek</span>
       <hr id="small_separator">
 
       <h4>17. Złota Moneta 100 zł Roman Dmowski 2017</h4>
@@ -438,26 +454,10 @@
         </div>
       </div>
       <p>Nakład: 2000, Stop: Au 900, Średnica: 21 mm, waga: 8 g</p>
+      <span>Cena: 7000 sek</span>
       <hr id="small_separator">
 
-      <h4>18. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
-      <div class="row">
-        <div class="col-1">
-          <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
-          <img class="bigphoto" src="images/200zl_JPII1998_gold_a.jpg" alt="image"> </div>
-        <div class="col-1">
-          <img class="photo" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
-          <img class="bigphoto" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
-        </div>
-        <div class="col-1">
-          <img class="photo" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
-          <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
-        </div>
-      </div>
-      <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz</p>
-      <hr id="small_separator">
-
-      <h4>19. Skarbnica Narodowa – Siedem cudów świata</h4>
+      <h4>18. Skarbnica Narodowa – Siedem cudów świata</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/7_cudow_gold_a.jpg" alt="image">
@@ -472,7 +472,27 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1 g</p>
+      <span>Cena: 7100 sek</span>
       <hr id="small_separator">
+
+      <h4>19. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_a.jpg" alt="image"> </div>
+        <div class="col-1">
+          <img class="photo" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz</p>
+      <span>Cena: 10000 sek</span>
+      <hr id="small_separator">
+
 
       <!-- <h4>17. Złota Moneta 200 zł Jan Paweł II, 2002</h4>
       <div class="row">
@@ -555,7 +575,9 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 10.000, Stop: Ag 500 , Średnica: 34 mm, waga: 15g</p>
+      <p>Nakład: 10.000, Stop: Ag 500 , Średnica: 34 mm, waga: 15g
+        <span>Cena: 200 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>2. Jan Paweł II – 10 zł 2002</h4>
@@ -574,7 +596,9 @@
           <img class="bigphoto" src="images/box1.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
+      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g
+        <span>Cena: 300 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>3. Jerzy Popiełuszko – 10 zł 2009</h4>
@@ -592,7 +616,9 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 100 000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
+      <p>Nakład: 100 000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g
+        <span>Cena: 300 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>4. Kanada, 5 Dolarów 2011 - Liść Klonowy (1 oz. Ag999.9)</h4>
@@ -610,7 +636,9 @@
           <img class="bigphoto" src="images/box1.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999 , Średnica: 38 mm, waga: 31,10g</p>
+      <p>Nakład: –, Stop: Ag 999 , Średnica: 38 mm, waga: 31,10g
+        <span>Cena: 450 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>5. Moneta 10 zł Kanonizacja Jana Pawła II</h4>
@@ -632,7 +660,9 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 50.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g</p>
+      <p>Nakład: 50.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g
+        <span>Cena: 450 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>6. 10 zł Roman Dmowski Stulecie odzyskania przez Polskę niepodległości</h4>
@@ -650,7 +680,9 @@
           <img class="bigphoto" src="images/dmowski_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 20.000, Stop: Ag 925 , Wymiary: 32 X 22,4 mm, waga: 14,14g</p>
+      <p>Nakład: 20.000, Stop: Ag 925 , Wymiary: 32 X 22,4 mm, waga: 14,14g
+        <span>Cena: 450 sek</span>
+      </p>
       <hr id="silver_separator">
 
 
@@ -669,7 +701,9 @@
           <img class="bigphoto" src="images/box2.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g</p>
+      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g
+        <span>Cena: 500 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>8. Jan Paweł II - Jasna Góra 1991</h4>
@@ -683,7 +717,9 @@
           <img class="bigphoto" src="images/pope1991_silver_b.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999, Średnica: 39 mm, waga: 31,1g</p>
+      <p>Nakład: –, Stop: Ag 999, Średnica: 39 mm, waga: 31,1g
+        <span>Cena: 500 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>9. 10 dolarów kanadyjskich 2014 – Kanonizacja Jana Pawła II
@@ -702,7 +738,9 @@
           <img class="bigphoto" src="images/10d_jpii_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17g</p>
+      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17g
+        <span>Cena: 600 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>10. 10 złotych 2017, Żołnierze Niezłomni, Danuta Siedzikówna ps. „Inka”
@@ -721,7 +759,9 @@
           <img class="bigphoto" src="images/inka_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 17.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g</p>
+      <p>Nakład: 17.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g
+        <span>Cena: 600 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>11. 10 złotych 2017, Żołnierze Niezłomni, Witold Pilecki ps. „Witold”
@@ -740,7 +780,9 @@
           <img class="bigphoto" src="images/pilecki_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g</p>
+      <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g
+        <span>Cena: 700 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>12. Australia 1$, Rok psa 2018
@@ -759,7 +801,9 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g</p>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g
+        <span>Cena: 550 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>13. Australia 2$, Rok psa 2018
@@ -778,7 +822,9 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g</p>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g
+        <span>Cena: 1000 sek</span>
+      </p>
       <hr id="silver_separator">
 
       <h4>14. Kolekcja 24 szt. Jan Paweł II
@@ -797,7 +843,9 @@
           <img class="bigphoto" src="images/24pope_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g</p>
+      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g
+        <span>Cena: 3000 sek</span>
+      </p>
       <hr id="silver_separator">
     </div>
   </div>
