--- a/index.html
+++ b/index.html
@@ -18,25 +18,19 @@
 </head>
 
 <body>
-
-
   <!-- <div id="background"></div> -->
-  <div>
+  <!-- <div>
 
     <div class="nav-contact">
-      <a href="mailto:poczta@numizmat.se?subject=Mail from Numizmat site">
+      <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
         <img class="contact_icon" src="images/z_koperta_white.png" alt="icon">
         <p id="email_address">poczta@numizmat.se</p>
       </a>
-
       <a href="https://www.facebook.com/Numizmatse-101197201596729">
         <img id="fb_icon" class="contact_icon" src="images/fb_nice_logo.png" alt="icon">
       </a>
-      <!-- <a href="tel:+46700716911">
-        <img class="contact_icon" src="images/icon_phone_gold.png" alt="icon">
-      </a> -->
     </div>
-  </div>
+  </div> -->
   <h1 id="title">NUMIZMAT</h1>
   <hr id="big_gold_separator">
 
@@ -470,7 +464,7 @@
           <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10000 sek</p>
+      <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10300 sek</p>
       <hr id="small_separator">
 
 
