--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
           <img class="photo" src="images/pope05_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/pope05_gold_b.jpg" alt="image">
         </div>
-        <div class="col-1">
+        <!--<div class="col-1">
           <img class="photo" src="images/pope05_gold_c.jpg" alt="image">
           <img class="bigphoto" src="images/pope05_gold_c.jpg" alt="image">
-        </div>
+        </div>-->
       </div>
       <p>Nakład: –, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.<br>Cena: 500 sek</p>
       <hr id="small_separator">
@@ -139,12 +139,12 @@
           <img class="photo" src="images/jezus_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/jezus_gold_b.jpg" alt="image">
         </div>
-        <div class="col-1">
+        <!--<div class="col-1">
           <img class="photo" src="images/jezus_gold_c.jpg" alt="image">
           <img class="bigphoto" src="images/jezus_gold_c.jpg" alt="image">
-        </div>
+        </div>-->
       </div>
-      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.<br>Cena: 900 sek</p>
+      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.<br>Cena: 800 sek</p>
       <hr id="small_separator">
 
       <h4>3. Złota Moneta – Chińska Panda, 10 yuanów 2016</h4>
@@ -314,7 +314,7 @@
       <p>Nakład: –, Stop: Au 999, Średnica: 16,10 mm, waga: 3,11g.<br>Cena: 2500 sek</p>
       <hr id="small_separator">
 
-      <h4>12. 50 zł, Orzeł Bielik 1/10oz</h4>
+      <h4>12. 50 zł, Orzeł Bielik (pierwszy rocznik) 1/10oz</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/bielik_gold_a.jpg" alt="image">
@@ -328,12 +328,12 @@
           <img class="photo" src="images/bielik_gold_c.jpg" alt="image">
           <img class="bigphoto" src="images/bielik_gold_c.jpg" alt="image">
         </div>
-        <div class="col-1">
+        <!--<div class="col-1">
           <img class="photo" src="images/box3.jpg" alt="image">
           <img class="bigphoto" src="images/box3.jpg" alt="image">
-        </div>
+        </div>-->
       </div>
-      <p>Nakład: –, Stop: Au 999.9 , Średnica: 18 mm, waga: 3,11g.<br>Cena: 3000 sek</p>
+      <p>Nakład: –, Stop: Au 999.9 , Średnica: 18 mm, waga: 3,11g.<br>Cena: 3200 sek</p>
       <hr id="small_separator">
 
       <h4>13. Złota Moneta 100 ZŁ Jan Paweł II 2005r.</h4>
@@ -658,8 +658,8 @@
           <img class="bigphoto" src="images/pope20zl_silver_b.jpg" alt="image">
         </div>
         <div class="col-1">
-          <img class="photo" src="images/box2.jpg" alt="image">
-          <img class="bigphoto" src="images/box2.jpg" alt="image">
+          <img class="photo" src="images/pope20zl_silver_c.jpg" alt="image">
+          <img class="bigphoto" src="images/pope20zl_silver_c.jpg" alt="image">
         </div>
       </div>
       <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g.<br>Cena: 500 sek</p>
