--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
           <img class="photo" src="images/chopin_gold_c.jpg" alt="image">
           <img class="bigphoto" src="images/chopin_gold_c.jpg" alt="image">
         </div>
+        <div class="col-1">
+          <img class="photo" src="images/chopin_gold_d.jpg" alt="image">
+          <img class="bigphoto" src="images/chopin_gold_d.jpg" alt="image">
+        </div>
       </div>
       <p>Nakład: 10.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.<br>Cena: 900 sek</p>
       <hr id="small_separator">
